fix: Adjust to use ZGC garbage collection